removed columns in faves and fix whitespace in mobile

--- a/public/css/responsive.css
+++ b/public/css/responsive.css
@@ -182,6 +182,9 @@
 }
 /*End Screen 860*/
 @media (max-width: 767px) {
+  .white-space {
+    height: 20px;
+  }
   .list-service-footer .list-none {
     flex-wrap: wrap;
     -webkit-flex-wrap: wrap;
